LOGINボタンの色修正

--- a/front/src/app/components/CommonStyles.module.css
+++ b/front/src/app/components/CommonStyles.module.css
@@ -76,7 +76,7 @@
   transform: translate(-50%, -50%);
   width: 20px;
   height: 20px;
-  background-color: #c5e5e4;
+  background-color: #02c4ff;
   border-radius: 50%;
   opacity: 0;
   transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
