--- a/front/src/app/components/App.module.css
+++ b/front/src/app/components/App.module.css
@@ -10,8 +10,9 @@
   color: #f1e9e9;
   font-size: 14px;
   font-family: var(--font-dot);
-  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+  box-shadow: 0 2px 4px #00fbff;;
   z-index: 3;
+  text-shadow: 0 0 4px #00fbff; /* テキストの影を微細に調整 */
 }
 
 .speechBubble::after {
@@ -25,6 +26,7 @@
   border-radius: 50%;
   transform: translateX(50%) rotate(45deg); /* 尾っぽを適切な角度に回転、向きを調整 */
   box-shadow: 2px 2px 2px rgba(0,0,0,0.1); /* 尾っぽにも影を追加、向きを調整 */
+  text-shadow: 0 0 50px #00fbff;
 }
 
 .speechBubble::before {
@@ -38,4 +40,5 @@
   border-radius: 50%; /* 完全な円形に */
   transform: translateX(50%) translateY(50%) rotate(45deg); /* 尾っぽの右下に配置し、角度を調整 */
   box-shadow: 1px 1px 2px rgba(0,0,0,0.1); /* 小さな丸にも影を追加、向きを調整 */
+  text-shadow: 0 0 50px #00fbff;
 }
